[project]
name = "serverless-ticketing-notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filipe Rodrigues", email = "filipe.rds.dev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.42",
    "pydantic>=2.13.4",
]

[project.scripts]
serverless-ticketing-notifications = "serverless_ticketing_notifications:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "moto>=5.2.2",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]
